--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint ./src",
     "lintfix": "eslint --fix ./src",
     "build": "rollup -c rollup.config.js",
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "storybook:build": "build-storybook -c .storybook -o docs",
     "prepublish": "npm run build"
   },
   "keywords": [
@@ -22,6 +24,7 @@
     "get-form-data": "^1.2.5"
   },
   "devDependencies": {
+    "@storybook/react": "^3.2.15",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-jest": "^21.2.0",
